# cbiscuit

./: CMakeLists.txt  LICENSE  README.md  TASKS.md
.cache/clangd/index/: lexer.c.4E90708F5EA11BB5.idx  lexer.h.7BB477FBBFE53141.idx  main.c.71FFB4C8E78AACDF.idx  parser.c.5A1EBAF46D45E645.idx
include/: bsqt_utils.h  lexer.h  parser.h
src/: lexer.c  main.c  parser.c  utils.c
tests/: bsqt_tester.c  bsqt_tests.py  comment.bsqt  comment.txt  multilines.bsqt  multilines.txt  spaces.bsqt  spaces.txt
